# lammps-ascent

./: CMakeLists.txt  README.md  lammps-ascent.cpp  lammps-ascent.cu
